Increase notification header height to stop cutting off text.

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -30628,7 +30628,7 @@ body.zXrpABNQHpWKgSzqnGlL:has(._3yiWpBXwEmDLlaIupVXjUt) {
 }
 
 ._1KIwOtwkYQUtRoPyxlh3G- svg:has([d="M29 23V27H7V23H2V32H34V23H29Z"]) {
-  -webkit-mask-image: var(--zehn-icon-download) !important;
+  -webkit-mask-image: var(--zehn-icon-install) !important;
 }
 
 ._3-UEC03E5hBqzay99CxSfu svg {
@@ -30727,7 +30727,7 @@ body.zXrpABNQHpWKgSzqnGlL:has(._3yiWpBXwEmDLlaIupVXjUt) {
   font-weight: var(--zehn-weight-normal) !important;
   font-size: var(--zehn-size-12) !important;
   color: var(--zehn-color-text1) !important;
-  line-height: var(--zehn-size-12) !important;
+  line-height: var(--zehn-size-16) !important;
   text-overflow: ellipsis !important;
   overflow: hidden !important;
   white-space: nowrap !important;
@@ -30749,7 +30749,7 @@ body.zXrpABNQHpWKgSzqnGlL:has(._3yiWpBXwEmDLlaIupVXjUt) {
   color: var(--zehn-color-text3) !important;
   line-height: var(--zehn-size-12) !important;
   text-overflow: ellipsis !important;
-  overflow: hidden !important;
+  overflow: visible !important;
   white-space: wrap !important;
 }
 
@@ -30763,7 +30763,7 @@ body.zXrpABNQHpWKgSzqnGlL:has(._3yiWpBXwEmDLlaIupVXjUt) {
   font-weight: var(--zehn-weight-normal) !important;
   font-size: var(--zehn-size-12) !important;
   color: var(--zehn-color-text1) !important;
-  line-height: var(--zehn-size-12) !important;
+  line-height: var(--zehn-size-16) !important;
   text-overflow: ellipsis !important;
   overflow: hidden !important;
   white-space: nowrap !important;
@@ -30781,8 +30781,9 @@ body.zXrpABNQHpWKgSzqnGlL:has(._3yiWpBXwEmDLlaIupVXjUt) {
   color: var(--zehn-color-text3) !important;
   line-height: var(--zehn-size-12) !important;
   text-overflow: ellipsis !important;
-  overflow: hidden !important;
+  overflow: visible !important;
   white-space: wrap !important;
+  line-height: var(--zehn-size-16) !important;
 }
 
 .zB56AM55vMjPKSZPL0A24,
@@ -30801,7 +30802,7 @@ body.zXrpABNQHpWKgSzqnGlL:has(._3yiWpBXwEmDLlaIupVXjUt) {
   color: var(--zehn-color-text3) !important;
   line-height: var(--zehn-size-12) !important;
   text-overflow: ellipsis !important;
-  overflow: hidden !important;
+  overflow: visible !important;
   white-space: wrap !important;
 }
 
@@ -30817,7 +30818,7 @@ body.zXrpABNQHpWKgSzqnGlL:has(._3yiWpBXwEmDLlaIupVXjUt) {
   color: var(--zehn-color-text3) !important;
   line-height: var(--zehn-size-12) !important;
   text-overflow: ellipsis !important;
-  overflow: hidden !important;
+  overflow: visible !important;
   white-space: wrap !important;
 }
 
@@ -30854,7 +30855,7 @@ body.zXrpABNQHpWKgSzqnGlL:has(._3yiWpBXwEmDLlaIupVXjUt) {
   color: var(--zehn-color-text3) !important;
   line-height: var(--zehn-size-12) !important;
   text-overflow: ellipsis !important;
-  overflow: hidden !important;
+  overflow: visible !important;
   white-space: wrap !important;
 }
 
@@ -30872,7 +30873,7 @@ body.zXrpABNQHpWKgSzqnGlL:has(._3yiWpBXwEmDLlaIupVXjUt) {
   color: var(--zehn-color-text3) !important;
   line-height: var(--zehn-size-12) !important;
   text-overflow: ellipsis !important;
-  overflow: hidden !important;
+  overflow: visible !important;
   white-space: wrap !important;
 }
 
@@ -30885,8 +30886,9 @@ body.zXrpABNQHpWKgSzqnGlL:has(._3yiWpBXwEmDLlaIupVXjUt) {
   color: var(--zehn-color-text3) !important;
   line-height: var(--zehn-size-12) !important;
   text-overflow: ellipsis !important;
-  overflow: hidden !important;
+  overflow: visible !important;
   white-space: wrap !important;
+  line-height: var(--zehn-size-16) !important;
 }
 
 ._3kK4VZViqBjOlDtDPzofcS,
@@ -32169,8 +32171,11 @@ body.zXrpABNQHpWKgSzqnGlL:has(._3yiWpBXwEmDLlaIupVXjUt) {
   -webkit-mask-image: var(--zehn-icon-shop-cart) !important;
 }
 
-._2EstNjFIIZm_WUSKm5Wt7n .Z5iAXBkRFGnwpXsO8ANTl.Install svg,
 ._2EstNjFIIZm_WUSKm5Wt7n .Z5iAXBkRFGnwpXsO8ANTl.PreLoad svg,
+._2EstNjFIIZm_WUSKm5Wt7n .Z5iAXBkRFGnwpXsO8ANTl.Install svg {
+  -webkit-mask-image: var(--zehn-icon-install) !important;
+}
+
 ._2EstNjFIIZm_WUSKm5Wt7n .Z5iAXBkRFGnwpXsO8ANTl.Download svg {
   -webkit-mask-image: var(--zehn-icon-download) !important;
 }
